# working-capital-optimizer

./: .env  .env.example  .gitignore  LICENSE  README.md  package-lock.json  tsconfig.json  working-capital-optimizer-deck.html
.github/workflows/: ci.yml
download/: ABOUT_PROJECT.md  DEMO_VIDEO_SCRIPT.md  codeberg-api.json  codeberg-page2.json  codeberg-page3.json  codeberg-profile.json  repo-battery-erp.json  repo-consensus-hardening-protocol.json  repo-metabocommand.json  repo-multi-agent-cfo-os.json  repo-scope-vantage.json  repo-sec-earnings-workbench.json  repo-strata.json  wco-demo.html
modenrich/: README.md  devvit.yaml  package.json  tsconfig.json
modenrich/src/: main.ts
src/app/: layout.tsx  page.tsx
src/app/api/wco/analyze/: route.ts
src/app/api/wco/evaluate/: route.ts
src/app/api/wco/evaluations/: route.ts
src/app/api/wco/health/: route.ts
src/components/wco/: agent-pipeline.tsx  cash-forecast-chart.tsx  ccc-summary.tsx  eval-scores-panel.tsx  recommendations-feed.tsx
src/lib/: wco-sample-data.ts  wco-store.ts  wco-types.ts
src/lib/resilience/: auth.ts  errors.ts  index.ts  rateLimit.ts  retry.ts  safeFetch.ts  timeout.ts
wco/: record_demo.py
wco/agent/: =2.0  pyproject.toml
wco/agent/src/wco/: __init__.py  cli.py  config.py
wco/agent/src/wco/agents/: __init__.py  ap_agent.py  ar_agent.py  base.py  cashflow_agent.py  inventory_agent.py
wco/agent/src/wco/api/: __init__.py  server.py
wco/agent/src/wco/data/: __init__.py  sample_data.py
wco/agent/src/wco/db/: __init__.py  connection.py
wco/agent/src/wco/eval/: __init__.py  evaluator.py  self_improvement.py
wco/agent/src/wco/mcp/: __init__.py  mcp_config.json
wco/agent/src/wco/orchestration/: __init__.py  context.py  orchestrator.py
wco/agent/src/wco/tracing/: __init__.py  phoenix_setup.py
(+1 files in other folders)
