[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wco-agent"
version = "0.1.0"
description = "Working Capital Optimizer — AI agent mesh for CFO-level cash flow intelligence"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "WCO Hackathon Team", email = "team@wco-agent.dev" },
]
keywords = ["working-capital", "ai-agents", "gemini", "phoenix", "arize", "hackathon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "google-genai>=1.0.0",
    "openinference-instrumentation-google-genai>=0.1.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "arize-phoenix>=7.0.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy-cockroachdb>=2.0.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
]

[project.scripts]
wco = "wco.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wco"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
